<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
 
    <ScrollView
        android:layout_weight="1"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	>
   	   <LinearLayout
   	       	android:layout_marginLeft="16dp"
   	       	android:layout_marginRight="16dp"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    >
		    <TextView
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/White"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:autoLink="all"
				android:textStyle="bold"
				android:textSize="16sp"
				android:text="@string/about"
	            />
	        <TextView
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/White"
				android:layout_marginBottom="10dp"
				android:autoLink="all"
				android:lineSpacingExtra="3dp"
				android:text="@string/about_radioreddit1"
	            />
	        <TextView
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/White"
				android:layout_marginBottom="10dp"
				android:lineSpacingExtra="3dp"
				android:text="@string/about_radioreddit2"
	            />
	        <TextView
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/White"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:autoLink="all"
				android:textStyle="bold"
				android:textSize="16sp"
				android:text="@string/acknowledgements"
	            />
	        <TextView
	            android:id="@+id/lbl_AcknowledgementsList"
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/White"
				android:layout_marginBottom="10dp"
				android:lineSpacingExtra="3dp"
	            />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:paddingTop="16dp"
        android:layout_weight="1"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="330dp"
	    >
   	   	<LinearLayout 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal"
   	       	>
	   	    <TextView
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/White"
				android:textStyle="bold"
				android:textSize="18sp"
				android:text="@string/app_name"
	            />
	   	    <TextView
	   	        android:id="@+id/lbl_VersionNumber"
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/White"
				android:textStyle="bold"
				android:textSize="18sp"
	            />
   	   </LinearLayout>
   	   <LinearLayout 
   	       	android:layout_marginTop="10dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal"
   	       	>
	   	    <Button 
	   	        android:id="@+id/btn_GoPro"
	   	        android:minWidth="150dp"
	   	        android:layout_weight="1"
	   	        android:layout_width="wrap_content"
	   	        android:layout_height="wrap_content"
	   	        android:text="@string/gopro_yes"
	   	        android:textSize="12sp"
	   	        />
	   	   	<Button 
	   	   	    android:id="@+id/btn_VisitRadioRedditCom"
	   	   	    android:minWidth="150dp"
	   	   	    android:layout_weight="1"
	   	        android:layout_width="wrap_content"
	   	        android:layout_height="wrap_content"
	   	        android:text="@string/visit_radioreddit_com"
	   	        android:textSize="12sp"
	   	        />
	   </LinearLayout>
	    <LinearLayout 
	        android:layout_marginTop="10dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal"
   	       	>
	   	    <Button 
	   	        android:id="@+id/btn_VisitRRadioReddit"
	   	        android:minWidth="150dp"
	   	        android:layout_weight="1"
	   	        android:layout_width="wrap_content"
	   	        android:layout_height="wrap_content"
	   	        android:text="@string/visit_r_radioreddit"
	   	        android:textSize="12sp"
	   	        />
	   	   	<Button 
	   	   	    android:id="@+id/btn_VisitRTalkRadioReddit"
	   	   	    android:minWidth="150dp"
	   	   	    android:layout_weight="1"
	   	        android:layout_width="wrap_content"
	   	        android:layout_height="wrap_content"
	   	        android:text="@string/visit_r_talkradioreddit"
	   	        android:textSize="12sp"
	   	        />
	   </LinearLayout>
	    
    </LinearLayout>
</LinearLayout>
